fix releases buttons and code fields on mobile

--- a/components/PricingPlan/pricing-plan-style.scss
+++ b/components/PricingPlan/pricing-plan-style.scss
@@ -69,7 +69,7 @@ p {
 
   .releases {
     text-align:center;
-     margin: 20px 0;
+     margin: 20px;
   }
 
 
@@ -86,4 +86,7 @@ p {
   overflow-x:auto !important;
   white-space: pre;
   font-weight:300;
+  @include breakpoints-down(md) {
+    width: 100% !important;
+  }
 }
